video/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
  namespace: video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
        - name: video
          image: ghcr.io/robinmordasiewicz/video:0.0.9
          ports:
            - containerPort: 8082
