video/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: video
  namespace: video
  labels:
    app: video
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: video
  type: NodePort
