video/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: video
  annotations: {
    "fortiweb-ip": "10.0.0.4",
    "fortiweb-login": "fortiweb-login-secret",
    "fortiweb-port": "8443",
    "fortiweb-ctrl-log": "enable",
    "virtual-server-ip": "10.0.0.8",
    "virtual-server-addr-type": "ipv4",
    "virtual-server-interface": "port1",
    "server-policy-https-service": "HTTPS",
    "server-policy-http-service": "HTTP",
    "server-policy-syn-cookie": "enable",
    "server-policy-http-to-https": "disable"
  }
spec:
  ingressClassName: fwb-ingress-controller
  rules:
    - host: video.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: video
                port:
                  number: 8082
